# StockPack

./: .gitignore  docker-compose.yaml
portfolio/: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
portfolio/src/: runner.py
portfolio/src/application/: container.py  server.py
portfolio/src/domain/history/: repository.py  schema.py
portfolio/src/domain/transaction_history/: repository.py
portfolio/src/infrastructure/base_entities/: abs_repository.py  singleton.py
portfolio/src/infrastructure/database/: db_helper.py
portfolio/src/infrastructure/database/alembic/: env.py
portfolio/src/infrastructure/database/alembic/versions/: b9b2bc7af5d7_create_transaction_history.py  cc9bc02dbd7d_create_transaction_history_model.py
portfolio/src/infrastructure/database/models/: __init__.py  base.py  transaction_history.py
portfolio/src/infrastructure/server/: server.py
portfolio/src/infrastructure/settings/: config.py
portfolio/src/presentation/: transaction_history.py
portfolio/src/service/: service.py  transaction_history_service.py
portfolio/src/settings/: config.py
stock/: Dockerfile  docker-compose.yaml  pyproject.toml
stock/src/: runner.py
stock/src/application/: server.py
stock/src/domain/stock/: schema.py
stock/src/infrastructure/base_entities/: abs_repository.py  singleton.py
