[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["Pasha Ryaguzov <pashajobber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.112.0"}
uvicorn = "^0.30.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
